--- a/.github/workflows/E04-github_token.yml
+++ b/.github/workflows/E04-github_token.yml
@@ -1,7 +1,10 @@
 # we will use some special secret in our repo, called GITHUB_TOKEN, that doest required to be added on our settings, and will allow us to authenticate.
 name: Some actions with auth
 
-on: push
+on:
+  push:
+    branches:
+      - feature/*
 
 jobs:
   Create-an-issue-example:
