--- a/.github/workflows/E08-docker.yml
+++ b/.github/workflows/E08-docker.yml
@@ -20,6 +20,8 @@ jobs:
           entrypoint: /usr/local/bin/node
           args: -v
       - uses: actions/checkout@v1
+        with:
+          ref: develop
       - name: Run a script
         uses: docker://node:12.14.1-alpine3.10
         with:
