--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           path: ~/.npm
           key: ${{runner.os}}-node-${{hashFiles('**/package.json')}}
-          restore-key: |
+          restore-keys: |
             ${{runner.os}}-node-
       - name: Use NodeJs
         uses: actions/setup-node@v1
