--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format:check": "prettier --check '**/*.{js,jsx,ts,tsx,yml,yaml,json,css,scss,md}'",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,yml,yaml,json,css,scss,md}'"
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,yml,yaml,json,css,scss,md}'",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -38,8 +39,11 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
+    "husky": "^8.0.1",
     "prettier": "2.6.2",
     "semantic-release": "^19.0.2"
   }
